API/Litecad.h

#define LC_PROP_ECW_W            3907  // R  float; Width (drawing units)
#define LC_PROP_ECW_H            3908  // R  float; Height (drawing units)
#define LC_PROP_ECW_WPIX         3909  // R  int; Width (pixels)
#define LC_PROP_ECW_HPIX         3910  // R  int; Height (pixels)
#define LC_PROP_ECW_CBIT         3911  // R  int; Color bits
#define LC_PROP_ECW_BORDER       3914  // RW bool; "Draw a border" flag 
#define LC_PROP_DIM_STYLE        4001  // RW handle|string; Handle to dim style|Name of dim style
#define LC_PROP_DIM_MEAS         4003  // R  float; measured value
#define LC_PROP_DIM_TEXT         4004  // RW string; 

#define LC_PROP_DIMANG_STYLE     4001  
#define LC_PROP_DIMANG_Z         4002  
#define LC_PROP_DIMANG_MEAS      4003  
#define LC_PROP_DIMANG_TEXT      4004  

#define LC_PROP_DIMALI_STYLE     4001  
#define LC_PROP_DIMALI_MEAS      4003  
#define LC_PROP_DIMALI_TEXT      4004  

#define LC_PROP_DIMDIA_STYLE     4001
#define LC_PROP_DIMDIA_MEAS      4003
#define LC_PROP_DIMDIA_TEXT      4004

#define LC_PROP_DIMRAD_STYLE     4001
#define LC_PROP_DIMRAD_MEAS      4003
#define LC_PROP_DIMRAD_TEXT      4004

#define LC_PROP_DIMORD_STYLE     4001
#define LC_PROP_DIMORD_MEAS      4003
#define LC_PROP_DIMORD_TEXT      4004

#define LC_PROP_DIMROT_STYLE     4001
#define LC_PROP_DIMROT_MEAS      4003
#define LC_PROP_DIMROT_TEXT      4004
#define LC_PROP_DIMANG_CPX       4021  // RW float; center point 1
#define LC_PROP_DIMANG_CPY       4022  // RW float; 
#define LC_PROP_DIMANG_DP1X      4023  // RW float; definition point 1
#define LC_PROP_DIMANG_DP1Y      4024  // RW float; 
#define LC_PROP_DIMANG_DP2X      4025  // RW float; definition point 2
#define LC_PROP_DIMANG_DP2Y      4026  // RW float; 
#define LC_PROP_DIMANG_DP3X      4027  // RW float; definition point 3
#define LC_PROP_DIMANG_DP3Y      4028  // RW float; 
#define LC_PROP_DIMANG_DP4X      4029  // RW float; definition point 4
#define LC_PROP_DIMANG_DP4Y      4030  // RW float; 
#define LC_PROP_DIMANG_APX       4031  // RW float; arc point X
#define LC_PROP_DIMANG_APY       4032  // RW float; arc point Y
#define LC_PROP_DIMANG_EXT1      4033  // RW bool; visibility of extention line 1
#define LC_PROP_DIMANG_EXT2      4034  // RW bool; visibility of extention line 2
#define LC_PROP_DIMANG_RAD       4035  // R  float; radius of dim arc
#define LC_PROP_DIMANG_TPOS      4036  // RW float; text position on arc
#define LC_PROP_DIMANG_CP        4037  //   for event
#define LC_PROP_DIMANG_DP1       4038  //   for event
#define LC_PROP_DIMANG_DP2       4039  //   for event
#define LC_PROP_DIMANG_DP3       4040  //   for event
#define LC_PROP_DIMANG_DP4       4041  //   for event
#define LC_PROP_DIMANG_AP        4042  //   for event
#define LC_PROP_DIMANG_TP        4043  //   for event
#define LC_PROP_DIMALI_DP1X      4051  // RW float; def point 1
#define LC_PROP_DIMALI_DP1Y      4052  // RW float;
#define LC_PROP_DIMALI_DP2X      4053  // RW float; def point 2
#define LC_PROP_DIMALI_DP2Y      4054  // RW float;
#define LC_PROP_DIMALI_TPX       4055  // RW float; text point
#define LC_PROP_DIMALI_TPY       4056  // RW float;
#define LC_PROP_DIMALI_DP1       4057  //   for event
#define LC_PROP_DIMALI_DP2       4058  //   for event
#define LC_PROP_DIMALI_TP        4059  //   for event
#define LC_PROP_DIMDIA_CPX       4071  // RW float; center point
#define LC_PROP_DIMDIA_CPY       4072  // RW float;
#define LC_PROP_DIMDIA_RPX       4073  // RW float; radial point
#define LC_PROP_DIMDIA_RPY       4074  // RW float;
#define LC_PROP_DIMDIA_TPX       4075  // RW float; text point
#define LC_PROP_DIMDIA_TPY       4076  // RW float;
#define LC_PROP_DIMDIA_CP        4077  //   for event
#define LC_PROP_DIMDIA_RP        4078  //   for event
#define LC_PROP_DIMDIA_TP        4079  //   for event
#define LC_PROP_DIMRAD_CPX       4086  // RW float; center point
#define LC_PROP_DIMRAD_CPY       4087  // RW float;
#define LC_PROP_DIMRAD_RPX       4088  // RW float; radial point
#define LC_PROP_DIMRAD_RPY       4089  // RW float;
#define LC_PROP_DIMRAD_TPX       4090  // RW float; text point
#define LC_PROP_DIMRAD_TPY       4091  // RW float;
#define LC_PROP_DIMRAD_CP        4092  //   for event
#define LC_PROP_DIMRAD_RP        4093  //   for event
#define LC_PROP_DIMRAD_TP        4094  //   for event
#define LC_PROP_DIMORD_XORD      4101  // RW bool; TRUE - X ordinate, FALSE - Y ordinate
#define LC_PROP_DIMORD_DPX       4102  // RW float; def point
#define LC_PROP_DIMORD_DPY       4103  // RW float; 
#define LC_PROP_DIMORD_TPX       4104  // RW float; text point
#define LC_PROP_DIMORD_TPY       4105  // RW float;
#define LC_PROP_DIMORD_DP        4106  //   for event
#define LC_PROP_DIMORD_TP        4107  //   for event
#define LC_PROP_DIMROT_ANGLE     4121  // RW float; rotation angle
#define LC_PROP_DIMROT_DP1X      4122  // RW float; def point 1
#define LC_PROP_DIMROT_DP1Y      4123  // RW float;
#define LC_PROP_DIMROT_DP2X      4124  // RW float; def point 2
#define LC_PROP_DIMROT_DP2Y      4125  // RW float;
#define LC_PROP_DIMROT_TPX       4126  // RW float; text point
#define LC_PROP_DIMROT_TPY       4127  // RW float;
#define LC_PROP_DIMROT_DP1       4128  //   for event
#define LC_PROP_DIMROT_DP2       4129  //   for event
#define LC_PROP_DIMROT_TP        4130  //   for event
#define LC_PROP_LEADER_STYLE     4502  // RW handle|string; Handle to dim style|Name of dim style
#define LC_PROP_LEADER_TEXT      4503  // RW string; 
#define LC_PROP_LEADER_ALIGN     4504  // RW int; text alignment (LC_LEADER_TLEFT and other)
#define LC_PROP_LEADER_TPX       4505  // RW float; text center X
#define LC_PROP_LEADER_TPY       4506  // RW float; text center Y
#define LC_PROP_LEADER_APX       4507  // RW float; arrow endpoint X
#define LC_PROP_LEADER_APY       4508  // RW float; arrow endpoint Y
#define LC_PROP_LEADER_LDIST     4510  // RW float; landing distance
#define LC_PROP_LEADER_VERT      4511  // RW bool; vertical line
#define LC_PROP_LEADER_CORNER    4512  // RW bool; attachment at corner
#define LC_PROP_LEADER_ATTACH    4513  //   for event
#define LC_PROP_LEADER_TP        4514  //   for event
#define LC_PROP_LEADER_AP        4515  //   for event
#define LC_PROP_VER_X            5001  // RW float; Coordinate X~
#define LC_PROP_VER_Y            5002  // RW float; Coordinate Y~
#define LC_PROP_VER_Z            5003  // RW float; Coordinate Y~
#define LC_PROP_VER_ENDPATH      5005  // RW bool; "End of path" flag. Used for multipath polyline.
#define LC_PROP_VER_FIX          5006  // RW bool; "Fixed vertex" flag (for LC_PLFIT_LINQUAD). 
#define LC_PROP_VER_RADIUS       5007  // RW float; Radius value~
// for segment fro current to next vertex
#define LC_PROP_VER_W0           5011  // RW float; Start width
#define LC_PROP_VER_W1           5012  // RW float; End width
#define LC_PROP_VER_SEGDX        5013  // RW float; dx
#define LC_PROP_VER_SEGDY        5014  // RW float; dy
#define LC_PROP_VER_SEGANG       5015  // RW float; angle
#define LC_PROP_VER_SEGLEN       5016  // RW float; length
#define LC_PROP_VER_BULGE        5021  // RW float; Bulge value
#define LC_PROP_VER_POS          5031  //   for event
#define LC_PROP_VER_PRM          5032  //   for event
#define LC_PROP_CMD_ID           5102  // R  int; command identifier LC_CMD_CUSTOM+n
#define LC_PROP_CMD_STEP         5103  // RW int; command step
#define LC_PROP_CMD_LCWND        5104  // R  handle; design window
#define LC_PROP_CMD_HWND         5105  // R  handle; HWND window handle 
#define LC_PROP_CMD_DRW          5106  // R  handle; drawing db
#define LC_PROP_CMD_BLOCK        5107  // R  handle; Handle to Block
#define LC_PROP_CMD_VIEW         5108  // R  handle; Handle to view
#define LC_PROP_CMD_CURSORX      5109  // R  int|float; Cursor position X (pixels)|Cursor position X (drawing's units)
#define LC_PROP_CMD_CURSORY      5110  // R  int|float; Cursor position Y (pixels)|Cursor position Y (drawing's units)
#define LC_PROP_CMD_OSNAP        5117  // RW int|bool; object snap mode | Enable object snap
#define LC_PROP_CMD_OSNAPONCE    5118  // RW int; once object snap mode
#define LC_PROP_CMD_NPOINTS      5119  // R  int; number of points in the list
#define LC_PROP_CMD_INT0         5120  // RW int; user value
#define LC_PROP_CMD_INT1         5121  // RW int; user value
#define LC_PROP_CMD_INT2         5122  // RW int; user value
#define LC_PROP_CMD_INT3         5123  // RW int; user value
#define LC_PROP_CMD_INT4         5124  // RW int; user value
#define LC_PROP_CMD_INT5         5125  // RW int; user value
#define LC_PROP_CMD_INT6         5126  // RW int; user value
#define LC_PROP_CMD_INT7         5127  // RW int; user value
#define LC_PROP_CMD_INT8         5128  // RW int; user value
#define LC_PROP_CMD_INT9         5129  // RW int; user value
#define LC_PROP_CMD_FLOAT0       5130  // RW float; user value
#define LC_PROP_CMD_FLOAT1       5131  // RW float; user value
#define LC_PROP_CMD_FLOAT2       5132  // RW float; user value
#define LC_PROP_CMD_FLOAT3       5133  // RW float; user value
#define LC_PROP_CMD_FLOAT4       5134  // RW float; user value
#define LC_PROP_CMD_FLOAT5       5135  // RW float; user value
#define LC_PROP_CMD_FLOAT6       5136  // RW float; user value
#define LC_PROP_CMD_FLOAT7       5137  // RW float; user value
#define LC_PROP_CMD_FLOAT8       5138  // RW float; user value
#define LC_PROP_CMD_FLOAT9       5139  // RW float; user value
#define LC_PROP_CMD_HAND0        5140  // RW handle; user value
#define LC_PROP_CMD_HAND1        5141  // RW handle; user value
#define LC_PROP_CMD_HAND2        5142  // RW handle; user value
#define LC_PROP_CMD_HAND3        5143  // RW handle; user value
#define LC_PROP_CMD_HAND4        5144  // RW handle; user value
#define LC_PROP_CMD_HAND5        5145  // RW handle; user value
#define LC_PROP_CMD_HAND6        5146  // RW handle; user value
#define LC_PROP_CMD_HAND7        5147  // RW handle; user value
#define LC_PROP_CMD_HAND8        5148  // RW handle; user value
#define LC_PROP_CMD_HAND9        5149  // RW handle; user value
#define LC_PROP_CMD_STR          5150  // RW string; user value
#define LC_PROP_CMDWND_ENABLE    9001    // RW bool; Command window is enabled
#define LC_PROP_PROPWND_ENABLE   9002    // RW bool; Properties window is enabled
#define LC_PROP_PROPWND_DIVCOEF  9003    // RW float; ratio of the name/value columns widths

// for event "EntModified"
#define LC_MOD_ENT_PROP          1   //   
#define LC_MOD_ENT_SET           2   //   
#define LC_MOD_PLINE_ADDVER      4
#define LC_MOD_PLINE_INSVER      5
#define LC_MOD_PLINE_DELVER      6
#define LC_MOD_PLINE_REVERSE     7
#define LC_MOD_ENT_MOVE          20  //  
#define LC_MOD_ENT_ROTATE        21  //  
#define LC_MOD_ENT_SCALE         22  //  
#define LC_MOD_ENT_MIRROR        23  //  
#define LC_MOD_ENT_JOIN          24

// for event "ObjModified"
#define LC_MOD_OBJ_PROP          31
#define LC_MOD_BLOCK_PURGE       32   // 0,1,2,3
#define LC_MOD_BLOCK_ADDENT      33

#define LC_MOD_DRW_PROP          51

// Initialization
BOOL    LCAPI lcInitialize    (LPCWSTR szConfigDir);

BOOL    LCAPI lcUninitialize  (BOOL bSaveConfig);

LPCWSTR LCAPI lcCfgGetValue   (HANDLE hCfg, LPCWSTR szTag);        // F_CFGLOAD
BOOL    LCAPI lcCfgSetValue   (HANDLE hCfg, LPCWSTR szTagValue);   // F_CFGSAVE
HANDLE  LCAPI lcAddFontRes    (HANDLE hModule, int idResource, LPCWSTR szFontName);

HANDLE  LCAPI lcAddFontFile   (LPCWSTR szFilename, LPCWSTR szFontName);

HANDLE  LCAPI lcAddFontBin    (HANDLE hData, LPCWSTR szFontName);


// GUI strings
BOOL    LCAPI lcStrAdd        (LPCWSTR szTag, LPCWSTR szText);
 
BOOL    LCAPI lcStrSet        (LPCWSTR szTag, LPCWSTR szText);

LPCWSTR LCAPI lcStrGet        (LPCWSTR szTag);
                   
BOOL    LCAPI lcStrFileLoad   (LPCWSTR szFileName);

BOOL    LCAPI lcStrFileSave   (LPCWSTR szFileName, LPCWSTR szLanguage, BOOL bInit);


// Objects properties
BOOL    LCAPI lcPropGetBool   (HANDLE hObject, int idProp);

int     LCAPI lcPropGetInt    (HANDLE hObject, int idProp);

double  LCAPI lcPropGetFloat  (HANDLE hObject, int idProp);

LPCWSTR LCAPI lcPropGetStr    (HANDLE hObject, int idProp);

HANDLE  LCAPI lcPropGetHandle (HANDLE hObject, int idProp);

BOOL    LCAPI lcPropPutBool   (HANDLE hObject, int idProp, BOOL bValue);