Samples/VCS/Test1/Litecad.cs

  public const int LC_PROP_ECW_X = 3903;
  public const int LC_PROP_ECW_Y = 3904;
  public const int LC_PROP_ECW_W = 3905;
  public const int LC_PROP_ECW_H = 3906;
  public const int LC_PROP_ECW_WPIX = 3907;
  public const int LC_PROP_ECW_HPIX = 3908;
  public const int LC_PROP_ECW_CBIT = 3909;
  public const int LC_PROP_ECW_BORDER = 3910;
  public const int LC_PROP_DIM_STYLE = 4001;
  public const int LC_PROP_DIM_MEAS = 4003;
  public const int LC_PROP_DIM_TEXT = 4004;
  public const int LC_PROP_DIMANG_STYLE = 4001;
  public const int LC_PROP_DIMANG_Z = 4002;
  public const int LC_PROP_DIMANG_MEAS = 4003;
  public const int LC_PROP_DIMANG_TEXT = 4004;
  public const int LC_PROP_DIMALI_STYLE = 4001;
  public const int LC_PROP_DIMALI_MEAS = 4003;
  public const int LC_PROP_DIMALI_TEXT = 4004;
  public const int LC_PROP_DIMDIA_STYLE = 4001;
  public const int LC_PROP_DIMDIA_MEAS = 4003;
  public const int LC_PROP_DIMDIA_TEXT = 4004;
  public const int LC_PROP_DIMRAD_STYLE = 4001;
  public const int LC_PROP_DIMRAD_MEAS = 4003;
  public const int LC_PROP_DIMRAD_TEXT = 4004;
  public const int LC_PROP_DIMORD_STYLE = 4001;
  public const int LC_PROP_DIMORD_MEAS = 4003;
  public const int LC_PROP_DIMORD_TEXT = 4004;
  public const int LC_PROP_DIMROT_STYLE = 4001;
  public const int LC_PROP_DIMROT_MEAS = 4003;
  public const int LC_PROP_DIMROT_TEXT = 4004;
  public const int LC_PROP_DIMANG_CPX = 4021;
  public const int LC_PROP_DIMANG_CPY = 4022;
  public const int LC_PROP_DIMANG_DP1X = 4023;
  public const int LC_PROP_DIMANG_DP1Y = 4024;
  public const int LC_PROP_DIMANG_DP2X = 4025;
  public const int LC_PROP_DIMANG_DP2Y = 4026;
  public const int LC_PROP_DIMANG_DP3X = 4027;
  public const int LC_PROP_DIMANG_DP3Y = 4028;
  public const int LC_PROP_DIMANG_DP4X = 4029;
  public const int LC_PROP_DIMANG_DP4Y = 4030;
  public const int LC_PROP_DIMANG_APX = 4031;
  public const int LC_PROP_DIMANG_APY = 4032;
  public const int LC_PROP_DIMANG_EXT1 = 4033;
  public const int LC_PROP_DIMANG_EXT2 = 4034;
  public const int LC_PROP_DIMANG_RAD = 4035;
  public const int LC_PROP_DIMANG_TPOS = 4036;
  public const int LC_PROP_DIMANG_CP = 4037;
  public const int LC_PROP_DIMANG_DP1 = 4038;
  public const int LC_PROP_DIMANG_DP2 = 4039;
  public const int LC_PROP_DIMANG_DP3 = 4040;
  public const int LC_PROP_DIMANG_DP4 = 4041;
  public const int LC_PROP_DIMANG_AP = 4042;
  public const int LC_PROP_DIMANG_TP = 4043;
  public const int LC_PROP_DIMALI_DP1X = 4051;
  public const int LC_PROP_DIMALI_DP1Y = 4052;
  public const int LC_PROP_DIMALI_DP2X = 4053;
  public const int LC_PROP_DIMALI_DP2Y = 4054;
  public const int LC_PROP_DIMALI_TPX = 4055;
  public const int LC_PROP_DIMALI_TPY = 4056;
  public const int LC_PROP_DIMALI_DP1 = 4057;
  public const int LC_PROP_DIMALI_DP2 = 4058;
  public const int LC_PROP_DIMALI_TP = 4059;
  public const int LC_PROP_DIMDIA_CPX = 4071;
  public const int LC_PROP_DIMDIA_CPY = 4072;
  public const int LC_PROP_DIMDIA_RPX = 4073;
  public const int LC_PROP_DIMDIA_RPY = 4074;
  public const int LC_PROP_DIMDIA_TPX = 4075;
  public const int LC_PROP_DIMDIA_TPY = 4076;
  public const int LC_PROP_DIMDIA_CP = 4077;
  public const int LC_PROP_DIMDIA_RP = 4078;
  public const int LC_PROP_DIMDIA_TP = 4079;
  public const int LC_PROP_DIMRAD_CPX = 4086;
  public const int LC_PROP_DIMRAD_CPY = 4087;
  public const int LC_PROP_DIMRAD_RPX = 4088;
  public const int LC_PROP_DIMRAD_RPY = 4089;
  public const int LC_PROP_DIMRAD_TPX = 4090;
  public const int LC_PROP_DIMRAD_TPY = 4091;
  public const int LC_PROP_DIMRAD_CP = 4092;
  public const int LC_PROP_DIMRAD_RP = 4093;
  public const int LC_PROP_DIMRAD_TP = 4094;
  public const int LC_PROP_DIMORD_XORD = 4101;
  public const int LC_PROP_DIMORD_DPX = 4102;
  public const int LC_PROP_DIMORD_DPY = 4103;
  public const int LC_PROP_DIMORD_TPX = 4104;
  public const int LC_PROP_DIMORD_TPY = 4105;
  public const int LC_PROP_DIMORD_DP = 4106;
  public const int LC_PROP_DIMORD_TP = 4107;
  public const int LC_PROP_DIMROT_ANGLE = 4121;
  public const int LC_PROP_DIMROT_DP1X = 4122;
  public const int LC_PROP_DIMROT_DP1Y = 4123;
  public const int LC_PROP_DIMROT_DP2X = 4124;
  public const int LC_PROP_DIMROT_DP2Y = 4125;
  public const int LC_PROP_DIMROT_TPX = 4126;
  public const int LC_PROP_DIMROT_TPY = 4127;
  public const int LC_PROP_DIMROT_DP1 = 4128;
  public const int LC_PROP_DIMROT_DP2 = 4129;
  public const int LC_PROP_DIMROT_TP = 4130;
  public const int LC_PROP_LEADER_STYLE = 4502;
  public const int LC_PROP_LEADER_TEXT = 4503;
  public const int LC_PROP_LEADER_ALIGN = 4504;
  public const int LC_PROP_LEADER_TPX = 4505;
  public const int LC_PROP_LEADER_TPY = 4506;
  public const int LC_PROP_LEADER_APX = 4507;
  public const int LC_PROP_LEADER_APY = 4508;
  public const int LC_PROP_LEADER_LDIST = 4510;
  public const int LC_PROP_LEADER_VERT = 4511;
  public const int LC_PROP_LEADER_CORNER = 4512;
  public const int LC_PROP_LEADER_ATTACH = 4513;
  public const int LC_PROP_LEADER_TP = 4514;
  public const int LC_PROP_LEADER_AP = 4515;
  public const int LC_PROP_VER_X = 5001;
  public const int LC_PROP_VER_Y = 5002;
  public const int LC_PROP_VER_Z = 5003;
  public const int LC_PROP_VER_ENDPATH = 5005;
  public const int LC_PROP_VER_FIX = 5006;
  public const int LC_PROP_VER_RADIUS = 5007;
  public const int LC_PROP_VER_W0 = 5011;
  public const int LC_PROP_VER_W1 = 5012;
  public const int LC_PROP_VER_SEGDX = 5013;
  public const int LC_PROP_VER_SEGDY = 5014;
  public const int LC_PROP_VER_SEGANG = 5015;
  public const int LC_PROP_VER_SEGLEN = 5016;
  public const int LC_PROP_VER_BULGE = 5021;
  public const int LC_PROP_VER_POS = 5031;
  public const int LC_PROP_VER_PRM = 5032;
  public const int LC_PROP_CMD_ID = 5102;
  public const int LC_PROP_CMD_STEP = 5103;
  public const int LC_PROP_CMD_LCWND = 5104;
  public const int LC_PROP_CMD_HWND = 5105;
  public const int LC_PROP_CMD_DRW = 5106;
  public const int LC_PROP_CMD_BLOCK = 5107;
  public const int LC_PROP_CMD_VIEW = 5108;
  public const int LC_PROP_CMD_CURSORX = 5109;
  public const int LC_PROP_CMD_CURSORY = 5110;
  public const int LC_PROP_CMD_CURSORZ = 5111;
  public const int LC_PROP_CMD_OSNAP = 5112;
  public const int LC_PROP_CMD_OSNAPONCE = 5113;
  public const int LC_PROP_CMD_NPOINTS = 5114;
  public const int LC_PROP_CMD_INT0 = 5120;
  public const int LC_PROP_CMD_INT1 = 5121;
  public const int LC_PROP_CMD_INT2 = 5122;
  public const int LC_PROP_CMD_INT3 = 5123;
  public const int LC_PROP_CMD_INT4 = 5124;
  public const int LC_PROP_CMD_INT5 = 5125;
  public const int LC_PROP_CMD_INT6 = 5126;
  public const int LC_PROP_CMD_INT7 = 5127;
  public const int LC_PROP_CMD_INT8 = 5128;
  public const int LC_PROP_CMD_INT9 = 5129;
  public const int LC_PROP_CMD_FLOAT0 = 5130;
  public const int LC_PROP_CMD_FLOAT1 = 5131;
  public const int LC_PROP_CMD_FLOAT2 = 5132;
  public const int LC_PROP_CMD_FLOAT3 = 5133;
  public const int LC_PROP_CMD_FLOAT4 = 5134;
  public const int LC_PROP_CMD_FLOAT5 = 5135;
  public const int LC_PROP_CMD_FLOAT6 = 5136;
  public const int LC_PROP_CMD_FLOAT7 = 5137;
  public const int LC_PROP_CMD_FLOAT8 = 5138;
  public const int LC_PROP_CMD_FLOAT9 = 5139;
  public const int LC_PROP_CMD_HAND0 = 5140;
  public const int LC_PROP_CMD_HAND1 = 5141;
  public const int LC_PROP_CMD_HAND2 = 5142;
  public const int LC_PROP_CMD_HAND3 = 5143;
  public const int LC_PROP_CMD_HAND4 = 5144;
  public const int LC_PROP_CMD_HAND5 = 5145;
  public const int LC_PROP_CMD_HAND6 = 5146;
  public const int LC_PROP_CMD_HAND7 = 5147;
  public const int LC_PROP_CMD_HAND8 = 5148;
  public const int LC_PROP_CMD_HAND9 = 5149;
  public const int LC_PROP_CMD_STR = 5150;
  public const int LC_PROP_CMDWND_ENABLE = 9001;
  public const int LC_PROP_PROPWND_ENABLE = 9002;
  public const int LC_PROP_PROPWND_DIVCOEF = 9003;
  public const int LC_MOD_ENT_PROP = 1;
  public const int LC_MOD_ENT_SET = 2;
  public const int LC_MOD_ENT_NORMVEC = 3;
  public const int LC_MOD_PLINE_ADDVER = 4;
  public const int LC_MOD_PLINE_INSVER = 5;
  public const int LC_MOD_PLINE_DELVER = 6;
  public const int LC_MOD_PLINE_REVERSE = 7;
  public const int LC_MOD_ENT_MOVE = 10;
  public const int LC_MOD_ENT_ROTATE = 11;
  public const int LC_MOD_ENT_SCALE = 12;
  public const int LC_MOD_ENT_MIRROR = 13;
  public const int LC_MOD_ENT_JOIN = 14;
  public const int LC_MOD_OBJ_PROP = 31;
  public const int LC_MOD_BLOCK_PURGE = 32;
  public const int LC_MOD_BLOCK_ADDENT = 33;
  public const int LC_MOD_DRW_PROP = 51;

  [DllImport("litecad.dll", EntryPoint="lcInitialize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool Initialize(string szConfigDir);

  [DllImport("litecad.dll", EntryPoint="lcUninitialize", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool Uninitialize(bool bSaveConfig);

  [DllImport("litecad.dll", EntryPoint="lcCfgGetValue", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string CfgGetValue(int hCfg, string szTag);

  [DllImport("litecad.dll", EntryPoint="lcCfgSetValue", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool CfgSetValue(int hCfg, string szTagValue);

  [DllImport("litecad.dll", EntryPoint="lcAddFontRes", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int AddFontRes(int hModule, int idResource, string szFontName);

  [DllImport("litecad.dll", EntryPoint="lcAddFontFile", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int AddFontFile(string szFilename, string szFontName);

  [DllImport("litecad.dll", EntryPoint="lcAddFontBin", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int AddFontBin(int hData, string szFontName);

  [DllImport("litecad.dll", EntryPoint="lcStrAdd", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool StrAdd(string szTag, string szText);

  [DllImport("litecad.dll", EntryPoint="lcStrSet", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool StrSet(string szTag, string szText);

  [DllImport("litecad.dll", EntryPoint="lcStrGet", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string StrGet(string szTag);

  [DllImport("litecad.dll", EntryPoint="lcStrFileLoad", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool StrFileLoad(string szFileName);

  [DllImport("litecad.dll", EntryPoint="lcStrFileSave", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool StrFileSave(string szFileName, string szLanguage, bool bInit);

  [DllImport("litecad.dll", EntryPoint="lcPropGetBool", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropGetBool(int hObject, int idProp);

  [DllImport("litecad.dll", EntryPoint="lcPropGetInt", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PropGetInt(int hObject, int idProp);

  [DllImport("litecad.dll", EntryPoint="lcPropGetFloat", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern double PropGetFloat(int hObject, int idProp);

  [DllImport("litecad.dll", EntryPoint="lcPropGetStr", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern string PropGetStr(int hObject, int idProp);

  [DllImport("litecad.dll", EntryPoint="lcPropGetHandle", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern int PropGetHandle(int hObject, int idProp);

  [DllImport("litecad.dll", EntryPoint="lcPropPutBool", CharSet = CharSet.Unicode, ExactSpelling = true)]
  public static extern bool PropPutBool(int hObject, int idProp, bool bValue);
